fix: force serve with SPA mode for proper routing
- Updated nixpacks.toml to use serve with -s flag
- Added .nixpacks/plan.json for alternative config
- Added start script to package.json
- This should fix 404 errors on route refresh

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["bun i --no-save"]
 cmds = ["bun run build"]
 
 [start]
-cmd = "npx serve dist -l 80"
+cmd = "npx serve@latest dist -s -l 80"
