--- a/nginx.conf
+++ b/nginx.conf
@@ -4,23 +4,6 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Proper MIME types
-    types {
-        text/html                             html htm shtml;
-        text/css                              css;
-        text/javascript                       js mjs;
-        application/javascript                js mjs;
-        application/json                      json;
-        image/gif                             gif;
-        image/jpeg                            jpeg jpg;
-        image/png                             png;
-        image/svg+xml                         svg svgz;
-        image/x-icon                          ico;
-        image/webp                            webp;
-        font/woff                             woff;
-        font/woff2                            woff2;
-    }
-
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -31,11 +14,10 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|webp)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        try_files $uri =404;
     }
 
-    # SPA fallback - all other routes go to index.html
+    # SPA fallback - all routes go to index.html if file doesn't exist
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
     }
 }
