--- a/nginx.conf
+++ b/nginx.conf
@@ -4,20 +4,8 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml+rss image/svg+xml;
-
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|webp)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # SPA fallback - all routes go to index.html if file doesn't exist
+    # SPA fallback - MUST come first to catch all routes
     location / {
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri /index.html;
     }
 }
