feat: add support for path-based routing with configurable base path
- Add VITE_BASE_PATH environment variable support in vite.config.ts
- Update Vue Router to use BASE_URL for path-based deployments
- Update nginx config with explicit static asset handling
- Increment Dockerfile cache bust to 6
- Document VITE_BASE_PATH in .env.example

This enables deploying MySigMail under a subpath (e.g., /mysigmail)
while maintaining full SPA routing functionality.

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ VITE_AWS_S3_KEY=your_r2_secret_access_key
 # R2 region - use 'auto' for Cloudflare R2
 # R2 automatically routes to the nearest location
 VITE_AWS_S3_REGION=auto
+
+# Base path for the application (for path-based routing)
+# Leave empty or set to '/' for root path
+# Set to '/mysigmail' if deploying under a subpath
+VITE_BASE_PATH=/
