--- a/nginx.conf
+++ b/nginx.conf
@@ -26,9 +26,16 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # SPA fallback - all routes go to index.html
+        # Serve static assets directly
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
+        }
+
+        # SPA fallback - all other routes go to index.html
         location / {
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
