--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Serve static assets directly
+        # Serve static assets directly (with or without base path)
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
