--- a/nginx.conf
+++ b/nginx.conf
@@ -26,14 +26,19 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Serve static assets directly (with or without base path)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
+        # Handle requests with /mysigmail prefix
+        location /mysigmail/ {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /index.html;
+            
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
         }
 
-        # SPA fallback - all other routes go to index.html
+        # Fallback for root path
         location / {
             try_files $uri $uri/ /index.html;
         }
