fix: revert to simple nginx config for Strip Path enabled
- Back to basic SPA routing config
- Works with Strip Path enabled in Traefik
- Increment cache bust to 9

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,19 +26,14 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # Handle requests with /mysigmail prefix
-        location /mysigmail/ {
-            alias /usr/share/nginx/html/;
-            try_files $uri $uri/ /index.html;
-            
-            # Cache static assets
-            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 1y;
-                add_header Cache-Control "public, immutable";
-            }
+        # Serve static assets directly
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
         }
 
-        # Fallback for root path
+        # SPA fallback - all other routes go to index.html
         location / {
             try_files $uri $uri/ /index.html;
         }
