fix: configure nginx with alias for /mysigmail path
- Use alias to map /mysigmail to /usr/share/nginx/html
- Requires Strip Path disabled and VITE_BASE_PATH=/mysigmail
- Increment cache bust to 10

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,18 +23,19 @@ http {
     server {
         listen 80;
         server_name _;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        # Serve static assets directly
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
+        
+        # Handle /mysigmail path
+        location /mysigmail {
+            alias /usr/share/nginx/html;
+            index index.html;
+            
+            # Try to serve the file, if not found serve index.html
+            try_files $uri $uri/ /mysigmail/index.html;
         }
-
-        # SPA fallback - all other routes go to index.html
+        
+        # Fallback for root
         location / {
+            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
         }
     }
