--- a/nginx.conf
+++ b/nginx.conf
@@ -23,19 +23,23 @@ http {
     server {
         listen 80;
         server_name _;
+        root /usr/share/nginx/html;
+        index index.html;
         
-        # Handle /mysigmail path
-        location /mysigmail {
-            alias /usr/share/nginx/html;
-            index index.html;
-            
-            # Try to serve the file, if not found serve index.html
-            try_files $uri $uri/ /mysigmail/index.html;
+        # Handle /mysigmail path with alias
+        location /mysigmail/ {
+            alias /usr/share/nginx/html/;
+            try_files $uri $uri/ /index.html;
         }
         
-        # Fallback for root
+        # Handle /mysigmail without trailing slash
+        location = /mysigmail {
+            alias /usr/share/nginx/html/;
+            try_files /index.html =404;
+        }
+        
+        # Fallback
         location / {
-            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
         }
     }
