--- a/nginx.conf
+++ b/nginx.conf
@@ -25,20 +25,15 @@ http {
         server_name _;
         root /usr/share/nginx/html;
         index index.html;
-        
-        # Handle /mysigmail path with alias
-        location /mysigmail/ {
-            alias /usr/share/nginx/html/;
-            try_files $uri $uri/ /index.html;
+
+        # Serve static assets directly
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri =404;
         }
-        
-        # Handle /mysigmail without trailing slash
-        location = /mysigmail {
-            alias /usr/share/nginx/html/;
-            try_files /index.html =404;
-        }
-        
-        # Fallback
+
+        # SPA fallback - all other routes go to index.html
         location / {
             try_files $uri $uri/ /index.html;
         }
