fix: use named location for SPA fallback with base path
- Use alias with try_files and named location @mysigmail_fallback
- Properly handle /mysigmail prefix without stripping
- Increment cache bust to 13

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,19 +23,21 @@ http {
     server {
         listen 80;
         server_name _;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        # Serve static assets directly
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            try_files $uri =404;
+        
+        # Serve everything under /mysigmail
+        location /mysigmail {
+            alias /usr/share/nginx/html;
+            index index.html;
+            
+            # First try to serve the file directly (removing /mysigmail prefix)
+            # If not found, serve index.html for SPA routing
+            try_files $uri @mysigmail_fallback;
         }
-
-        # SPA fallback - all other routes go to index.html
-        location / {
-            try_files $uri $uri/ /index.html;
+        
+        # Fallback location for SPA routing
+        location @mysigmail_fallback {
+            rewrite ^/mysigmail/.* /index.html break;
+            root /usr/share/nginx/html;
         }
     }
 }
