--- a/nginx.conf
+++ b/nginx.conf
@@ -25,19 +25,12 @@ http {
         server_name _;
         
         # Serve everything under /mysigmail
-        location /mysigmail {
-            alias /usr/share/nginx/html;
+        location ~ ^/mysigmail(/.*)?$ {
+            alias /usr/share/nginx/html$1;
             index index.html;
             
-            # First try to serve the file directly (removing /mysigmail prefix)
-            # If not found, serve index.html for SPA routing
-            try_files $uri @mysigmail_fallback;
-        }
-        
-        # Fallback location for SPA routing
-        location @mysigmail_fallback {
-            rewrite ^/mysigmail/.* /index.html break;
-            root /usr/share/nginx/html;
+            # Try to serve the file, if not found, serve index.html for SPA routing
+            try_files $uri $uri/ /index.html;
         }
     }
 }
