fix: use named location for SPA fallback with correct root path
- Add @mysigmail_index named location with explicit root
- Fixes /etc/nginx/html path issue
- Increment cache bust to 15

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,14 +23,21 @@ http {
     server {
         listen 80;
         server_name _;
+        root /usr/share/nginx/html;
+        index index.html;
         
         # Serve everything under /mysigmail
         location ~ ^/mysigmail(/.*)?$ {
             alias /usr/share/nginx/html$1;
-            index index.html;
             
             # Try to serve the file, if not found, serve index.html for SPA routing
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ @mysigmail_index;
+        }
+        
+        # Fallback to index.html for SPA routing
+        location @mysigmail_index {
+            root /usr/share/nginx/html;
+            try_files /index.html =404;
         }
     }
 }
